Add protected developer console
